[package]
name = "fish-oxide"
version = "0.2.0"
edition = "2021"
description = "A port of fishdraw to rust"
license = "MIT"
readme = "readme.md"
authors = ["Ava Silver <ava@avasilver.dev>"]
repository = "https://github.com/ava-silver/fish-oxide"
categories = ["command-line-utilities", "graphics", "multimedia::images"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
rand = "0.8.4"
regex = "1.11.1"
