[package]
name = "fish-oxide"
version = "0.3.1"
edition = "2021"
description = "A port of fishdraw to rust"
license = "MIT"
readme = "readme.md"
authors = ["Ava Silver <ava@avasilver.dev>"]
repository = "https://github.com/ava-silver/fish-oxide"
categories = ["command-line-utilities", "graphics", "multimedia::images"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde_json = "1.0.135"
rand = "0.8.4"
